css/main.css
html {
  font-family: "Open Sans", sans-serif;
  padding-top: 0;
  background-color: #f2f2f2;
  color: #000;
}

form {
  background-color: #fff;
  padding: 1rem;
  padding-top: 2.5rem;
}

h1 {
  margin-bottom: 1rem;
  border-bottom: solid;
  border-width: 1px;
}

.wrapper {
  padding: 0;
}

p {
  padding-top: .5rem;
  margin-bottom: 0;
}

div {
  padding: .5rem;
  padding-top: 0;
}

.details {
  padding-bottom: 1rem;
  padding-top: 1rem;
}

@media only screen and (min-width: 60em) {

  .space-right {
    padding-right: .5rem;
  }

  .space-left {
    padding-left: .5rem;
  }

}

